fixed UI alignment

--- a/style.css
+++ b/style.css
@@ -13,7 +13,10 @@ body {
     height: 100px;
     width: 900px;
     padding: 2%;
-    margin: 30px;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 30px;
+    margin-top: 2%;
     background-color: rgb(41, 5, 126);
     border: solid 1px;
     border-radius: 10px;
